--- a/template/dl.html
+++ b/template/dl.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="https://ibb.co/D5zqNj3/Logo-Teamrioupdates.png" type="image/x-icon">
-    <meta property="og:image" content="https://ibb.co/D5zqNj3/Logo-Teamrioupdates.png" itemprop="thumbnailUrl">
+    <link rel="shortcut icon" href="https://telegra.ph/file/8ff6bafd11dca573bb953.jpg" type="image/x-icon">
+    <meta property="og:image" content="https://telegra.ph/file/8ff6bafd11dca573bb953.jpg" itemprop="thumbnailUrl">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>%s | Teamrioupdates</title>
@@ -39,7 +39,7 @@
                     </div>
                     <div class="d-flex ">
                         <!-- logo -->
-                        <img src="https://ibb.co/D5zqNj3/Logo-Teamrioupdates.png" width="80" height="80" class="rounded" style="box-shadow: 3px 5px 11px black;" alt="">
+                        <img src="https://telegra.ph/file/8ff6bafd11dca573bb953.jpg" width="80" height="80" class="rounded" style="box-shadow: 3px 5px 11px black;" alt="">
                         <div class="p-3">
                             <h4 class="offcanvas-title font-semibold wow animate__animated animate__fadeInLeft " id="offcanvasWithBothOptionsLabel" style="text-shadow: 3px 5px 11px black;" >LazyDeveloperr</h4>
                             <p class="text-red-600 font-semibold wow animate__animated animate__fadeIn animate__delay-1s animate__infinite">The one & Only</p>
@@ -49,16 +49,16 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
                             <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
                           </svg>    
-                        Follow rc_memes_18
+                        Follow TEAM-RIO-NETWORKS
                     </a>
                     <div class="d-flex gap-1 px-1 mt-1 wow animate__animated animate__fadeInLeft animate__delay-1s ">
-                        <a href="https://teleram.me/creatorrio" target="_blank" class="btn btn-secondary w-50 text-light fw-semibold flex justify-center items-center gap-2 text-xs">
+                        <a href="https://gitHub.com/TEAM-RIO-NETWORKS" target="_blank" class="btn btn-secondary w-50 text-light fw-semibold flex justify-center items-center gap-2 text-xs">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telegram" viewBox="0 0 16 16">
                                 <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.287 5.906c-.778.324-2.334.994-4.666 2.01-.378.15-.577.298-.595.442-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294.26.006.549-.1.868-.32 2.179-1.471 3.304-2.214 3.374-2.23.05-.012.12-.026.166.016.047.041.042.12.037.141-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8.154 8.154 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629.093.06.183.125.27.187.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.426 1.426 0 0 0-.013-.315.337.337 0 0 0-.114-.217.526.526 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09z"/>
                               </svg>
                             Updates
                         </a>
-                        <a href="https://github.com/TEAM-RIO-NETWORKS/THALAPATHY-FILTER-BOT" target="_blank" class="btn btn-primary w-50 text-light  fw-semibold flex justify-center items-center gap-2 text-xs">
+                        <a href="https://telegram.me/Teamrioupdates" target="_blank" class="btn btn-primary w-50 text-light  fw-semibold flex justify-center items-center gap-2 text-xs">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-git" viewBox="0 0 16 16">
                                 <path d="M15.698 7.287 8.712.302a1.03 1.03 0 0 0-1.457 0l-1.45 1.45 1.84 1.84a1.223 1.223 0 0 1 1.55 1.56l1.773 1.774a1.224 1.224 0 0 1 1.267 2.025 1.226 1.226 0 0 1-2.002-1.334L8.58 5.963v4.353a1.226 1.226 0 1 1-1.008-.036V5.887a1.226 1.226 0 0 1-.666-1.608L5.093 2.465l-4.79 4.79a1.03 1.03 0 0 0 0 1.457l6.986 6.986a1.03 1.03 0 0 0 1.457 0l6.953-6.953a1.031 1.031 0 0 0 0-1.457"/>
                               </svg>
@@ -212,7 +212,7 @@
                 <div class="col-lg-2 col-4 justify-content-center align-items-center text-center mt-lg-0 mt-5  pt-lg-0 pt-4 wow animate__animated animate__fadeInUp">
                     <ul class="navbar-nav ">
                         <li class="nav-item justify-center items-center flex"  style="margin-top: -40px;">
-                            <img src="https://ibb.co/D5zqNj3/Logo-Teamrioupdates.png" height="140px" class="rounded-3 " alt="logo">
+                            <img src="https://telegra.ph/file/8ff6bafd11dca573bb953.jpg" height="140px" class="rounded-3 " alt="logo">
                         </li>
                         <!-- <li class="nav-item justify-center items-center text-center">
                             <a  class="nav-link h1 text-center sm:-m-1 -ms-4"><h5><a class="font-bold" href="https://t.me/tamilmovies4Krio" target="_blank">Movies : </a>Run and managed by <a href="https://telegram.me/creatorrio" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Adil</a> & <a href="https://telegram.me/creatorrio" target="_blank">Indu(<a href="https://telegram.me/creatorrio" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Teamrioupdates</a>)</a> </h5></a>
@@ -225,7 +225,7 @@
             <div class=" justify-center items-center text-center w-full text-center flex ">
                 <div  class="text-gray-400 text-center sm:-m-1 -ms-4 m-2 p-2">
                     <h5>
-                        <a class="font-bold" href="https://t.me/tamilmovies4Krio" target="_blank">Movies : </a>Run and managed by <a href="https://telegram.me/Aadil_h" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Adil</a> & <a href="https://telegram.me/creatorrio" target="_blank">Indu(<a href="https://telegram.me/creatorrio" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Teamrioupdates</a>)
+                        <a class="font-bold" href="https://t.me/tamilmovies4Krio" target="_blank">For Movies : </a> Special Thanks To Lazydeveloperr Helping This journey 🥰 <a href="https://telegram.me/Lazydeveloperr" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Lazydeveloperr</a> & <a href="https://telegram.me/creatorrio" target="_blank">Any Errors Contact (<a href="https://telegram.me/creatorrio" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Teamrioupdates</a>)
                         </a> 
                     </h5>
                 </div>
