--- a/template/req.html
+++ b/template/req.html
@@ -1,4 +1,4 @@
-Thanks @Lazydeveloperr helping this journey 
+#Thanks @Lazydeveloperr helping this journey 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -38,17 +38,17 @@ Thanks @Lazydeveloperr helping this journey
                     </div>
                     <div class="d-flex ">
                         <!-- logo -->
-                        <img src="https://i.ibb.co/37Twgkh/Logo-Lazydeveloperr.png" width="80" height="80" class="rounded" style="box-shadow: 3px 5px 11px black;" alt="">
+                        <img src="https://telegra.ph/file/8ff6bafd11dca573bb953.jpg" width="80" height="80" class="rounded" style="box-shadow: 3px 5px 11px black;" alt="">
                         <div class="p-3">
-                            <h4 class="offcanvas-title font-semibold wow animate__animated animate__fadeInLeft " id="offcanvasWithBothOptionsLabel" style="text-shadow: 3px 5px 11px black;" >LazyDeveloperr</h4>
+                            <h4 class="offcanvas-title font-semibold wow animate__animated animate__fadeInLeft " id="offcanvasWithBothOptionsLabel" style="text-shadow: 3px 5px 11px black;" >TEAM-RIO-NETWORKS</h4>
                             <p class="text-red-600 font-semibold wow animate__animated animate__fadeIn animate__delay-1s animate__infinite">The one & Only</p>
                         </div>
                     </div>
-                    <a href="https://github.com/LazyDeveloperr" target="_blank" class="btn btn-dark w-100 text-light fw-semibold flex justify-center items-center gap-2 mt-2 wow animate__animated animate__fadeInDown  ">
+                    <a href="https://github.com/TEAM-RIO-NETWORKS" target="_blank" class="btn btn-dark w-100 text-light fw-semibold flex justify-center items-center gap-2 mt-2 wow animate__animated animate__fadeInDown  ">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
                             <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
                           </svg>    
-                        Follow rc_memes_18
+                        Follow TEAM-RIO-NETWORKS
                     </a>
                     <div class="d-flex gap-1 px-1 mt-1 wow animate__animated animate__fadeInLeft animate__delay-1s ">
                         <a href="https://teleram.me/creatorrio" target="_blank" class="btn btn-secondary w-50 text-light fw-semibold flex justify-center items-center gap-2 text-xs">
@@ -57,7 +57,7 @@ Thanks @Lazydeveloperr helping this journey
                               </svg>
                             Updates
                         </a>
-                        <a href="https://github.com/TEAM-RIO-NETWORKS/THALAPATHY-FILTER-BOT" target="_blank" class="btn btn-primary w-50 text-light  fw-semibold flex justify-center items-center gap-2 text-xs">
+                        <a href="https://telegram.me/Teamrioupdates" target="_blank" class="btn btn-primary w-50 text-light  fw-semibold flex justify-center items-center gap-2 text-xs">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-git" viewBox="0 0 16 16">
                                 <path d="M15.698 7.287 8.712.302a1.03 1.03 0 0 0-1.457 0l-1.45 1.45 1.84 1.84a1.223 1.223 0 0 1 1.55 1.56l1.773 1.774a1.224 1.224 0 0 1 1.267 2.025 1.226 1.226 0 0 1-2.002-1.334L8.58 5.963v4.353a1.226 1.226 0 1 1-1.008-.036V5.887a1.226 1.226 0 0 1-.666-1.608L5.093 2.465l-4.79 4.79a1.03 1.03 0 0 0 0 1.457l6.986 6.986a1.03 1.03 0 0 0 1.457 0l6.953-6.953a1.031 1.031 0 0 0 0-1.457"/>
                               </svg>
@@ -124,7 +124,7 @@ Thanks @Lazydeveloperr helping this journey
                 <div class="container-fluid">
                     <a class="navbar-brand  text-light fw-bold " href="https://t.me/tamilmovies4Krio">
                         <span class="bg-clip-text sm:text-[25px] text-[22px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500">
-                            Movies 
+                            For Movies 
                           </span>
                     </a>
                   </div>
@@ -241,7 +241,7 @@ Thanks @Lazydeveloperr helping this journey
                     </a>
               
                     <!-- ADMIN -->
-                    <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInDown animate__delay-1s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-300" href="https://t.me/creatorrio" target="_blank" role="button">
+                    <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInDown animate__delay-1s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-300" href="https://telegram.me/creatorrio" target="_blank" role="button">
                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30">
                         <path fill="url(#PMWUiMSnUf2R_PPJ6rqZea_44112_gr1)" d="M24,4H6C4.895,4,4,4.895,4,6v18c0,1.105,0.895,2,2,2h18c1.105,0,2-0.895,2-2V6C26,4.895,25.105,4,24,4z M10.954,22h-2.95 v-9.492h2.95V22z M9.449,11.151c-0.951,0-1.72-0.771-1.72-1.72c0-0.949,0.77-1.719,1.72-1.719c0.948,0,1.719,0.771,1.719,1.719 C11.168,10.38,10.397,11.151,9.449,11.151z M22.004,22h-2.948v-4.616c0-1.101-0.02-2.517-1.533-2.517 c-1.535,0-1.771,1.199-1.771,2.437V22h-2.948v-9.492h2.83v1.297h0.04c0.394-0.746,1.356-1.533,2.791-1.533 c2.987,0,3.539,1.966,3.539,4.522V22z"></path>
                     </svg>
@@ -270,10 +270,10 @@ Thanks @Lazydeveloperr helping this journey
                     <div class="col-lg-2 col-4 justify-content-center align-items-center text-center mt-lg-0 mt-5  pt-lg-0 pt-4 wow animate__animated animate__fadeInUp">
                         <ul class="navbar-nav ">
                             <li class="nav-item justify-center items-center flex"  style="margin-top: -40px;">
-                                <img src="https://ibb.co/D5zqNj3/Logo-Teamrioupdates.png" height="140px" class="rounded-3 " alt="logo">
+                                <img src="https://telegra.ph/file/8ff6bafd11dca573bb953.jpg" height="140px" class="rounded-3 " alt="logo">
                             </li>
                             <!-- <li class="nav-item justify-center items-center text-center">
-                                <a  class="nav-link h1 text-center sm:-m-1 -ms-4"><h5><a class="font-bold" href="https://t.me/tamilmovies4Krio" target="_blank">Movies : </a>Run and managed by <a href="https://telegram.me/Aadil_h" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Adil</a> & <a href="https://telegram.me/creatorrio" target="_blank">Indu(<a href="https://telegram.me/Teamrioupdates" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">LazyDeveloper</a>)</a> </h5></a>
+                                <a  class="nav-link h1 text-center sm:-m-1 -ms-4"><h5><a class="font-bold" href="https://t.me/tamilmovies4Krio" target="_blank">For Movies : </a>Special Thanks to Helping This Journey 🥰 <a href="https://telegram.me/Lazydeveloperr" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Lazydeveloperr</a> & <a href="https://telegram.me/creatorrio" target="_blank">For any Errors Contact(<a href="https://telegram.me/Teamrioupdates" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">LazyDeveloper</a>)</a> </h5></a>
                             </li> -->
                         </ul>
                     </div>
@@ -283,7 +283,7 @@ Thanks @Lazydeveloperr helping this journey
                 <div class=" justify-center items-center text-center w-full text-center flex ">
                     <div  class="text-gray-400 text-center sm:-m-1 -ms-4 m-2 p-2">
                         <h5>
-                            <a class="font-bold" href="https://t.me/tamilmovies4Krio" target="_blank">Movies : </a>Run and managed by <a href="https://telegram.me/Aadil_h" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Adil</a> & <a href="https://telegram.me/creatorrio" target="_blank">Indu(<a href="https://telegram.me/Teamrioupdates" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">LazyDeveloper</a>)
+                            <a class="font-bold" href="https://t.me/tamilmovies4Krio" target="_blank">Movies : </a>Special Thanks to Helping This journey 🥰 <a href="https://telegram.me/Lazydeveloperr" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Lazydeveloperr</a> & <a href="https://telegram.me/creatorrio" target="_blank">For Any Error Contact(<a href="https://telegram.me/Teamrioupdates" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">UPDATES</a>)
                             </a> 
                         </h5>
                     </div>
