--- a/template/dl.html
+++ b/template/dl.html
@@ -1,4 +1,4 @@
-#Thanks @Lazydeveloperr helping this journey 
+#Thanks @KingVJ01 helping this journey 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +7,7 @@
     <meta property="og:image" content="https://telegra.ph/file/8ff6bafd11dca573bb953.jpg" itemprop="thumbnailUrl">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>%s | Teamrioupdates</title>
+    <title>%s | Tech VJ</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>    
@@ -77,12 +77,12 @@
                         <h2 class="font-semibold" style="text-shadow: 1px 2px 8px black;">Explore</h2>
                     </div>
                     <div class=" d-block px-5 wow animate__animated animate__fadeInRight ">
-                        <a href="https://t.me/tamilmovies4Krio" type="button" class="btn btn-outline-secondary w-100 mt-1 wow animate__animated animate__fadeIn ">Trending Movies</a>
-                        <a href="https://t.me/tamilmovies4Krio" type="button" class="btn btn-outline-secondary w-100 mt-1">Newly Released Movies</a>
-                        <a href="https://t.me/tamilmovies4Krio" type="button" class="btn btn-outline-secondary w-100 mt-1">Popular on Movies Available</a>
-                        <a href="https://t.me/tamilmovies4Krio" type="button" class="btn btn-outline-secondary w-100 mt-1">Bollywood Movies</a>
-                        <a href="https://t.me/tamilmovies4Krio" type="button" class="btn btn-outline-secondary w-100 mt-1">Hollwood Movies</a>
-                        <a href="https://t.me/tamilmovies4Krio" type="button" class="btn btn-outline-secondary w-100 mt-1">webseries</a>
+                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1 wow animate__animated animate__fadeIn ">Trending Movies</a>
+                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1">Newly Released Movies</a>
+                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1">Popular on Movies Available</a>
+                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1">Bollywood Movies</a>
+                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1">Hollwood Movies</a>
+                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1">webseries</a>
                     </div>
                     
                 <!-- section -->
@@ -123,7 +123,7 @@
 
                 <!-- web title -->
                 <div class="container-fluid">
-                    <a class="navbar-brand  text-light fw-bold " href="https://t.me/tamilmovies4Krio">
+                    <a class="navbar-brand  text-light fw-bold " href="https://t.me/vj_bots">
                         <span class="bg-clip-text sm:text-[25px] text-[22px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500">
                             Movies group
                           </span>
@@ -162,35 +162,35 @@
             <!-- Section: Social media -->
             <section class="lg:p-4 p-2 justify-content-center align-items-center text-center ">  
                 <!-- ADMIN -->
-                <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInLeft hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-200" href="https://t.me/creatorrio" target="_blank" role="button">
+                <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInLeft hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-200" href="https://telegram.me/KingVj01" target="_blank" role="button">
                      <svg class="wow animate__animated animate__heartBeat animate__delay-1s animate__infinite" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 64 64">
                         <linearGradient id="PMWUiMSnUf2R_PPJ6rqZea_44112_gr1" x1="32" x2="32" y1="10" y2="54.751" gradientUnits="userSpaceOnUse" spreadMethod="reflect"><stop offset="0" stop-color="#1a6dff"></stop><stop offset="1" stop-color="#c822ff"></stop></linearGradient><path fill="url(#PMWUiMSnUf2R_PPJ6rqZea_44112_gr1)" d="M32,53.001c-6.358,0-12.716-0.195-19.299-0.584c-4.96-0.293-8.961-4.242-9.308-9.187 c-0.521-7.452-0.521-15.009-0.001-22.46c0.348-4.945,4.349-8.895,9.309-9.188c13.167-0.778,25.433-0.778,38.598,0 c4.96,0.293,8.961,4.242,9.308,9.187c0.521,7.452,0.521,15.009,0.001,22.46c-0.348,4.945-4.349,8.895-9.309,9.188l0,0 C44.716,52.806,38.358,53.001,32,53.001z M51.182,50.421l0.059,0.998L51.182,50.421c3.959-0.234,7.153-3.386,7.431-7.331 c0.515-7.358,0.515-14.821-0.001-22.181c-0.276-3.944-3.471-7.096-7.43-7.33c-13.088-0.773-25.275-0.773-38.363,0 c-3.959,0.234-7.153,3.386-7.431,7.331c-0.515,7.358-0.515,14.821,0.001,22.181c0.276,3.944,3.471,7.096,7.43,7.33 C25.906,51.194,38.094,51.194,51.182,50.421z"></path><linearGradient id="PMWUiMSnUf2R_PPJ6rqZeb_44112_gr2" x1="31.72" x2="31.72" y1="24.25" y2="39.252" gradientUnits="userSpaceOnUse" spreadMethod="reflect"><stop offset="0" stop-color="#6dc7ff"></stop><stop offset="1" stop-color="#e6abff"></stop></linearGradient><path fill="url(#PMWUiMSnUf2R_PPJ6rqZeb_44112_gr2)" d="M25 39.84L25 24.16 38.44 32z"></path><linearGradient id="PMWUiMSnUf2R_PPJ6rqZec_44112_gr3" x1="32.212" x2="32.212" y1="10" y2="54.751" gradientUnits="userSpaceOnUse" spreadMethod="reflect"><stop offset="0" stop-color="#1a6dff"></stop><stop offset="1" stop-color="#c822ff"></stop></linearGradient><path fill="url(#PMWUiMSnUf2R_PPJ6rqZec_44112_gr3)" d="M24,41.581V22.419L40.425,32L24,41.581z M26,25.901v12.197L36.456,32L26,25.901z"></path>
                     </svg>
                 </a>
           
                 <!-- Telegram -->
-                <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInDown animate__delay-1s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-200" href="https://telegram.me/creatorrio" target="_blank" role="button">
+                <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInDown animate__delay-1s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-200" href="https://telegram.me/KingVj01" target="_blank" role="button">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 50 50">
                     <path fill="url(#PMWUiMSnUf2R_PPJ6rqZea_44112_gr1)" d="M25,2c12.703,0,23,10.297,23,23S37.703,48,25,48S2,37.703,2,25S12.297,2,25,2z M32.934,34.375	c0.423-1.298,2.405-14.234,2.65-16.783c0.074-0.772-0.17-1.285-0.648-1.514c-0.578-0.278-1.434-0.139-2.427,0.219	c-1.362,0.491-18.774,7.884-19.78,8.312c-0.954,0.405-1.856,0.847-1.856,1.487c0,0.45,0.267,0.703,1.003,0.966	c0.766,0.273,2.695,0.858,3.834,1.172c1.097,0.303,2.346,0.04,3.046-0.395c0.742-0.461,9.305-6.191,9.92-6.693	c0.614-0.502,1.104,0.141,0.602,0.644c-0.502,0.502-6.38,6.207-7.155,6.997c-0.941,0.959-0.273,1.953,0.358,2.351	c0.721,0.454,5.906,3.932,6.687,4.49c0.781,0.558,1.573,0.811,2.298,0.811C32.191,36.439,32.573,35.484,32.934,34.375z"></path>
                 </svg>
                 </a>
           
                 <!-- Instagram -->
-                <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInUp animate__delay-2s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-300" href="https://instagram.com/rc_memes_18" target="_blank" role="button">
+                <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInUp animate__delay-2s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-300" href="https://instagram.com/tech.vj" target="_blank" role="button">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 50 50">
                     <path fill="url(#PMWUiMSnUf2R_PPJ6rqZea_44112_gr1)" d="M 16 3 C 8.8324839 3 3 8.8324839 3 16 L 3 34 C 3 41.167516 8.8324839 47 16 47 L 34 47 C 41.167516 47 47 41.167516 47 34 L 47 16 C 47 8.8324839 41.167516 3 34 3 L 16 3 z M 16 5 L 34 5 C 40.086484 5 45 9.9135161 45 16 L 45 34 C 45 40.086484 40.086484 45 34 45 L 16 45 C 9.9135161 45 5 40.086484 5 34 L 5 16 C 5 9.9135161 9.9135161 5 16 5 z M 37 11 A 2 2 0 0 0 35 13 A 2 2 0 0 0 37 15 A 2 2 0 0 0 39 13 A 2 2 0 0 0 37 11 z M 25 14 C 18.936712 14 14 18.936712 14 25 C 14 31.063288 18.936712 36 25 36 C 31.063288 36 36 31.063288 36 25 C 36 18.936712 31.063288 14 25 14 z M 25 16 C 29.982407 16 34 20.017593 34 25 C 34 29.982407 29.982407 34 25 34 C 20.017593 34 16 29.982407 16 25 C 16 20.017593 20.017593 16 25 16 z"></path>
                     </svg>
                 </a>
           
                 <!-- OWNER -->
-                <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInDown animate__delay-1s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-300" href="https://t.me/creatorrio" target="_blank" role="button">
+                <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInDown animate__delay-1s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-300" href="https://telegram.me/KingVj01" target="_blank" role="button">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30">
                     <path fill="url(#PMWUiMSnUf2R_PPJ6rqZea_44112_gr1)" d="M24,4H6C4.895,4,4,4.895,4,6v18c0,1.105,0.895,2,2,2h18c1.105,0,2-0.895,2-2V6C26,4.895,25.105,4,24,4z M10.954,22h-2.95 v-9.492h2.95V22z M9.449,11.151c-0.951,0-1.72-0.771-1.72-1.72c0-0.949,0.77-1.719,1.72-1.719c0.948,0,1.719,0.771,1.719,1.719 C11.168,10.38,10.397,11.151,9.449,11.151z M22.004,22h-2.948v-4.616c0-1.101-0.02-2.517-1.533-2.517 c-1.535,0-1.771,1.199-1.771,2.437V22h-2.948v-9.492h2.83v1.297h0.04c0.394-0.746,1.356-1.533,2.791-1.533 c2.987,0,3.539,1.966,3.539,4.522V22z"></path>
                 </svg>
                 </a>
           
                 <!-- Github -->
-                <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInUp animate__delay-2s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-300" href="https://github.com/TEAM-RIO-NETWORKS" target="_blank" role="button">
+                <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInUp animate__delay-2s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-300" href="https://github.com/VJBots" target="_blank" role="button">
                  <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30">
                     <path  fill="url(#PMWUiMSnUf2R_PPJ6rqZea_44112_gr1)" d="M15,3C8.373,3,3,8.373,3,15c0,5.623,3.872,10.328,9.092,11.63C12.036,26.468,12,26.28,12,26.047v-2.051 c-0.487,0-1.303,0-1.508,0c-0.821,0-1.551-0.353-1.905-1.009c-0.393-0.729-0.461-1.844-1.435-2.526 c-0.289-0.227-0.069-0.486,0.264-0.451c0.615,0.174,1.125,0.596,1.605,1.222c0.478,0.627,0.703,0.769,1.596,0.769 c0.433,0,1.081-0.025,1.691-0.121c0.328-0.833,0.895-1.6,1.588-1.962c-3.996-0.411-5.903-2.399-5.903-5.098 c0-1.162,0.495-2.286,1.336-3.233C9.053,10.647,8.706,8.73,9.435,8c1.798,0,2.885,1.166,3.146,1.481C13.477,9.174,14.461,9,15.495,9 c1.036,0,2.024,0.174,2.922,0.483C18.675,9.17,19.763,8,21.565,8c0.732,0.731,0.381,2.656,0.102,3.594 c0.836,0.945,1.328,2.066,1.328,3.226c0,2.697-1.904,4.684-5.894,5.097C18.199,20.49,19,22.1,19,23.313v2.734 c0,0.104-0.023,0.179-0.035,0.268C23.641,24.676,27,20.236,27,15C27,8.373,21.627,3,15,3z"></path>
                 </svg>
@@ -201,12 +201,12 @@
               <div class="row flex-row-reverse text-secondary justify-content-center align-items-center">
                   <div class="col-lg-6 col-12 justify-content-center align-items-center text-center p-1 wow animate__animated animate__fadeInRight">
                     <ul class="navbar-nav">
-                        <li class="navbar-item bg-gradient-to-r from-pink-500 rounded-xl p-2"> <h5 class="text-gray-100 font-semibold text-sm"> Think & just code it... </h5><sup class="badge badge-error text-xs text-gray-300 font-monospace">-creatorrio</sup> </li>
+                        <li class="navbar-item bg-gradient-to-r from-pink-500 rounded-xl p-2"> <h5 class="text-gray-100 font-semibold text-sm"> Think & just code it... </h5><sup class="badge badge-error text-xs text-gray-300 font-monospace">VJ</sup> </li>
                     </ul>
                 </div>
                 <div class="col-lg-6 col-12 justify-content-center align-items-center text-center p-1 wow animate__animated animate__fadeInLeft">
                     <ul class="navbar-nav">
-                        <li class="navbar-item bg-gradient-to-l from-pink-500 rounded-xl p-2 "> <h5 class="text-gray-100 font-semibold text-sm" > Success is the journey of millions of failure and lots of hard work </h5> <sup class="badge  text-xs text-gray-300 font-monospace">-creatorrio</sup> </li>
+                        <li class="navbar-item bg-gradient-to-l from-pink-500 rounded-xl p-2 "> <h5 class="text-gray-100 font-semibold text-sm" > Success is the journey of millions of failure and lots of hard work </h5> <sup class="badge  text-xs text-gray-300 font-monospace">VJ</sup> </li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-4 justify-content-center align-items-center text-center mt-lg-0 mt-5  pt-lg-0 pt-4 wow animate__animated animate__fadeInUp">
@@ -215,7 +215,7 @@
                             <img src="https://telegra.ph/file/8ff6bafd11dca573bb953.jpg" height="140px" class="rounded-3 " alt="logo">
                         </li>
                         <!-- <li class="nav-item justify-center items-center text-center">
-                            <a  class="nav-link h1 text-center sm:-m-1 -ms-4"><h5><a class="font-bold" href="https://t.me/tamilmovies4Krio" target="_blank">Movies : </a>Run and managed by <a href="https://telegram.me/creatorrio" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Adil</a> & <a href="https://telegram.me/creatorrio" target="_blank">Indu(<a href="https://telegram.me/creatorrio" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Teamrioupdates</a>)</a> </h5></a>
+                            <a  class="nav-link h1 text-center sm:-m-1 -ms-4"><h5><a class="font-bold" href="https://t.me/VJ_Bots" target="_blank">Movies : </a>Run and managed by <a href="https://telegram.me/KingVj01" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Adil</a> & <a href="https://telegram.me/KingVj01" target="_blank">Indu(<a href="https://telegram.me/KingVj01" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Tech VJ</a>)</a> </h5></a>
                         </li> -->
                     </ul>
                 </div>
@@ -225,7 +225,7 @@
             <div class=" justify-center items-center text-center w-full text-center flex ">
                 <div  class="text-gray-400 text-center sm:-m-1 -ms-4 m-2 p-2">
                     <h5>
-                        <a class="font-bold" href="https://t.me/vj_bots" target="_blank">For Movies : </a> Special Thanks To Lazydeveloperr Helping This journey 🥰 <a href="https://telegram.me/vj_bots" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Lazydeveloperr</a> & <a href="https://telegram.me/creatorrio" target="_blank">Any Errors Contact (<a href="https://telegram.me/creatorrio" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Teamrioupdates</a>)
+                        <a class="font-bold" href="https://t.me/vj_bots" target="_blank">For Movies : </a> Special Thanks To VJ Helping This journey 🥰 <a href="https://telegram.me/vj_bots" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">VJ</a> & <a href="https://telegram.me/KingVj01" target="_blank">Any Errors Contact (<a href="https://telegram.me/KingVj01" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Tech VJ</a>)
                         </a> 
                     </h5>
                 </div>
