--- a/template/dl.html
+++ b/template/dl.html
@@ -1,10 +1,10 @@
-#Thanks @KingVJ01 helping this journey 
+#Thanks @My_Name_is_developer helping this journey 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="https://telegra.ph/file/8ff6bafd11dca573bb953.jpg" type="image/x-icon">
-    <meta property="og:image" content="https://telegra.ph/file/8ff6bafd11dca573bb953.jpg" itemprop="thumbnailUrl">
+    <link rel="shortcut icon" href="https://telegra.ph/file/7f2d5fc700e6698432e42.jpg" type="image/x-icon">
+    <meta property="og:image" content="https://telegra.ph/file/7f2d5fc700e6698432e42.jpg" itemprop="thumbnailUrl">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>%s | Tech VJ</title>
@@ -39,7 +39,7 @@
                     </div>
                     <div class="d-flex ">
                         <!-- logo -->
-                        <img src="https://telegra.ph/file/8ff6bafd11dca573bb953.jpg" width="80" height="80" class="rounded" style="box-shadow: 3px 5px 11px black;" alt="">
+                        <img src="https://telegra.ph/file/7f2d5fc700e6698432e42.jpg" width="80" height="80" class="rounded" style="box-shadow: 3px 5px 11px black;" alt="">
                         <div class="p-3">
                             <h4 class="offcanvas-title font-semibold wow animate__animated animate__fadeInLeft " id="offcanvasWithBothOptionsLabel" style="text-shadow: 3px 5px 11px black;" >LazyDeveloperr</h4>
                             <p class="text-red-600 font-semibold wow animate__animated animate__fadeIn animate__delay-1s animate__infinite">The one & Only</p>
@@ -77,12 +77,12 @@
                         <h2 class="font-semibold" style="text-shadow: 1px 2px 8px black;">Explore</h2>
                     </div>
                     <div class=" d-block px-5 wow animate__animated animate__fadeInRight ">
-                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1 wow animate__animated animate__fadeIn ">Trending Movies</a>
-                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1">Newly Released Movies</a>
-                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1">Popular on Movies Available</a>
-                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1">Bollywood Movies</a>
-                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1">Hollwood Movies</a>
-                        <a href="https://t.me/vj_bots" type="button" class="btn btn-outline-secondary w-100 mt-1">webseries</a>
+                        <a href="https://t.me/ALAS_NOW" type="button" class="btn btn-outline-secondary w-100 mt-1 wow animate__animated animate__fadeIn ">Trending Movies</a>
+                        <a href="https://t.me/ALAS_NOW" type="button" class="btn btn-outline-secondary w-100 mt-1">Newly Released Movies</a>
+                        <a href="https://t.me/ALAS_NOW" type="button" class="btn btn-outline-secondary w-100 mt-1">Popular on Movies Available</a>
+                        <a href="https://t.me/ALAS_NOW" type="button" class="btn btn-outline-secondary w-100 mt-1">Bollywood Movies</a>
+                        <a href="https://t.me/ALAS_NOW" type="button" class="btn btn-outline-secondary w-100 mt-1">Hollwood Movies</a>
+                        <a href="https://t.me/ALAS_NOW" type="button" class="btn btn-outline-secondary w-100 mt-1">webseries</a>
                     </div>
                     
                 <!-- section -->
@@ -123,7 +123,7 @@
 
                 <!-- web title -->
                 <div class="container-fluid">
-                    <a class="navbar-brand  text-light fw-bold " href="https://t.me/vj_bots">
+                    <a class="navbar-brand  text-light fw-bold " href="https://t.me/ALAS_NOW">
                         <span class="bg-clip-text sm:text-[25px] text-[22px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500">
                             Movies group
                           </span>
@@ -239,7 +239,7 @@
                 document.write(theDate.getFullYear()) 
         </script> Copyright :
             <a class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-bold tracking-wide px-1" href="https://telegram.me/vj_bots">LazyDeveloperr</a>
-            <!--🥰  Thank you for giving me credit @kingvj01  🥰 -->
+            <!--🥰  Thank you for giving me credit @My_Name_is_developer  🥰 -->
             All right reserved
         </div>   
     </footer>
@@ -285,4 +285,4 @@
 </body>
 </html>
 
-<!--  Don't Remove Credit @VJ_Bot Subscribe YouTube Channel For Amazing Bot @Tech_VJ Ask Doubt on telegram @KingVJ01 -->
+<!--  Don't Remove Credit @My_Name_is_developer Subscribe YouTube Channel For Amazing Bot @ALAS Ask Doubt on telegram @My_Name_is_developer -->
